# projectportfolio

./: .gitignore  AzuriteConfig  Dockerfile  LICENSE  README.md  Set_FabAcl.ps1  __azurite_db_blob__.json  __azurite_db_blob_extent__.json  app.py  app1.py  notebook.ipynb  package-lock.json  package.json  pyproject.toml  static_variables.py  test.py
.github/workflows/: deploy.yml  deploy_main.yml
backend/: Dockerfile  api_main.py  innlevering_router.py  router.py  vurdering_router.py
backend/database/: data_models.py  db.py  db_connection.py  validators.py
database_connection/: create_connection.py  sql_models.py
frontend/: Dockerfile  app.py  static_variables.py
frontend/pages/: login_page.py  open_overview.py  overview.py  single_project.py  status_rapportering.py  utils.py  vurdering.py
frontend/utils/: authentorize.py  azure_users.py  backend_client.py
infra/: main.tf  variables.tf
models/: cache_model.py  sql_models.py  ui_models.py  validators.py
pages/: dashboard.py  digdir_aktivitet.py  digdir_bidrag.py  digdir_leveranse.py  login_page.py  main.py  overordnet_info.py  single_project.py  status_rapportering.py  utils.py
tables/: new_table_id.json
tests/: test_db_connection.py  test_validators.py
tests/backend/: test_innlevering_router.py
tests/frontend/: test_utils.py
utils/: azure_users.py  backend_client.py  connect_engine.py  data_models.py  db_connection.py  db_functions.py  model_table.py  project_loader.py  validators.py
