[project]
name = "int-activities"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "azure-identity>=1.25.1",
    "azure-keyvault>=4.2.0",
    "cachetools>=6.2.1",
    "msal>=1.34.0",
    "nicegui>=2.23.0",
    "pyodbc>=5.3.0",
    "sqlmodel>=0.0.27",
]
