[project]
name = "int-activities"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "azure-identity>=1.25.1",
    "azure-identity-broker>=1.3.0",
    "azure-keyvault>=4.2.0",
    "azure-keyvault-secrets>=4.10.0",
    "cachetools>=6.2.1",
    "msal>=1.34.0",
    "microsoft-kiota-abstractions>=1.9.7",
    "msgraph-core>=1.3.8",
    "msgraph-sdk>=1.46.0",
    "nicegui>=2.23.0",
    "pyodbc>=5.3.0",
    "sqlmodel>=0.0.27",
    "tenacity>=9.1.2",
    "pytest>=8.4.2",
    "httpx>=0.28.1",
    "uvicorn>=0.38.0",
]
[tool.pytest.ini_options]
testpaths = ["tests"]
